force-app/main/default/objects/Form_Signature__c/Form_Signature__c.object-meta.xml
<CustomObject>
    <description>One signature event on a submission. Two per fully-signed form (engineer, supervisor).</description>
    <label>Form Signature</label>
    <pluralLabel>Form Signatures</pluralLabel>
    <nameField>
        <label>Signature Number</label>
        <type>AutoNumber</type>
        <displayFormat>SIG-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>