force-app/main/default/objects/Form_Signature__c/fields/Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Field_Id__c</fullName>
    <label>Field Id</label>
    <description>Schema field id of the signature field this fulfills (e.g. f_sig_engineer).</description>
    <length>64</length>
    <type>Text</type>
    <required>true</required>
</CustomField>