force-app/main/default/objects/Form_Signature__c/fields/Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission__c</fullName>
    <label>Form Submission</label>
    <description>Master-detail: a signature has no meaning without its submission; cascade delete is correct here.</description>
    <type>MasterDetail</type>
    <referenceTo>Form_Submission__c</referenceTo>
    <relationshipLabel>Signatures</relationshipLabel>
    <relationshipName>Signatures</relationshipName>
</CustomField>