force-app/main/default/objects/Form_Signature__c/fields/Image_CV_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_CV_Id__c</fullName>
    <label>Image ContentVersion Id</label>
    <description>ContentVersion Id of the captured signature PNG.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>