force-app/main/default/objects/Form_Signature__c/fields/Is_Void__c.field-meta.xml
<CustomField>
    <fullName>Is_Void__c</fullName>
    <label>Is Void</label>
    <description>Marked true when a rejection invalidates prior signatures on revise.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>