force-app/main/default/objects/Form_Signature__c/fields/Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_By__c</fullName>
    <label>Signed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Signatures</relationshipLabel>
    <relationshipName>Signatures</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>