force-app/main/default/objects/Form_Signature__c/fields/Signer_Role__c.field-meta.xml
<CustomField>
    <fullName>Signer_Role__c</fullName>
    <label>Signer Role</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>engineer</fullName><default>true</default><label>Engineer</label></value>
            <value><fullName>supervisor</fullName><default>false</default><label>Supervisor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>